<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lock</string>
    <string name="engineer">© engineers 2024</string>
    <string name="moto">Smart Lock</string>
    <string name="pin">Create Security Code</string>
    <string name="username">Enter username</string>
    <string name="userPin">Enter code</string>
    <string name="pinConfirm">Confirm code</string>
    <string name="create">CREATE</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="enterPin">Enter PIN</string>
    <string name="authentication">Authentication</string>
    <string name="history">History</string>
    <string name="list">Auth list</string>
    <string name="battery">Battery</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="enrollment">Enrollment</string>
    <string name="states">States</string>
    <string name="name">Name</string>
    <string name="permission">Permission</string>
    <string name="time">Time</string>
    <string name="status">Status</string>
    <string name="update">Update user details</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="access_status">Access status</string>
    <string name="access">ACCESS</string>
    <string name="deny">DENY</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="update_button">UPDATE</string>
    <string name="change_password">Change Password</string>
    <string name="add_mobile_number">Add mobile number</string>
    <string name="live">LIVE</string>
    <string name="enter_security_code">Enter security code</string>
    <string name="already_have_a_code">Already have a code?</string>
    <string name="continues">CONTINUE</string>
    <string name="enter_pervious_code">Enter pervious code</string>
    <string name="enter_new_code">Enter new code</string>
    <string name="confirm_code">Confirm code</string>
    <string name="change">CHANGE</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="enter_phone_number_26599">Enter Phone Number (+26599..)</string>
    <string name="add_number">ADD NUMBER</string>

</resources>