<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:gravity="center"
    android:background="@drawable/white_card_view_style"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:text="@string/update"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="5dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/fName"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_first_name"
        android:padding="10dp"
        android:background="@drawable/update_user_edit_text_style"
        android:layout_height="50dp"
        android:inputType="text"
        android:autofillHints="YES" />

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/surname"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_surname"
        android:padding="10dp"
        android:background="@drawable/update_user_edit_text_style"
        android:layout_height="50dp"
        android:inputType="text"
        android:autofillHints="YES" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/access_status"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="5dp"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:text="@string/access"
            android:id="@+id/accessR"
            android:padding="5dp"
            android:checked="true"
            android:layout_height="wrap_content"/>


        <RadioButton
            android:layout_width="wrap_content"
            android:text="@string/deny"
            android:id="@+id/denyR"
            android:padding="5dp"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="150dp"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginEnd="15dp"
            android:background="@drawable/cancel_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="150dp"
            android:id="@+id/update"
            android:text="@string/update_button"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            android:background="@drawable/update_button"
            tools:ignore="ButtonStyle" />

    </LinearLayout>



</LinearLayout>