<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/white_card_view_style"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/oldCode"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_pervious_code"
        android:padding="10dp"
        android:background="@drawable/update_user_edit_text_style"
        android:layout_height="50dp"
        android:inputType="number"
        android:autofillHints="YES" />

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/newCode"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_new_code"
        android:padding="10dp"
        android:background="@drawable/update_user_edit_text_style"
        android:layout_height="50dp"
        android:inputType="number"
        android:autofillHints="YES" />

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/confirmCode"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_code"
        android:padding="10dp"
        android:background="@drawable/update_user_edit_text_style"
        android:layout_height="50dp"
        android:inputType="number"
        android:autofillHints="YES" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="100dp"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginEnd="5dp"
            android:background="@drawable/cancel_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:layout_width="100dp"
            android:id="@+id/change"
            android:text="@string/change"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:background="@drawable/update_button"
            tools:ignore="ButtonStyle" />

    </LinearLayout>



</LinearLayout>