<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticationActivity">

    <ImageView
        android:layout_width="60dp"
        android:src="@drawable/laucher"
        android:contentDescription="@string/moto"
        android:layout_marginTop="20dp"
        android:id="@+id/smallLock"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_height="60dp"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/moto"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:layout_below="@+id/smallLock"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center"
        android:layout_above="@+id/engineer"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:background="@drawable/linear_layout_style"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/enterPin"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="3"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            >

            <Button
                android:id="@+id/one"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/number_button_style"
                android:text="@string/one"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />
            <Button
                android:layout_width="40dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/two"
                android:id="@+id/two"
                android:background="@drawable/number_button_style"
                android:layout_marginStart="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_height="40dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="40dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/three"
                android:id="@+id/three"
                android:background="@drawable/number_button_style"
                android:layout_marginStart="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_height="40dp"
                tools:ignore="ButtonStyle" />


            <Button
                android:id="@+id/four"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/number_button_style"
                android:text="@string/four"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />
            <Button
                android:layout_width="40dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:text="@string/five"
                android:id="@+id/five"
                android:background="@drawable/number_button_style"
                android:layout_marginStart="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_height="40dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="40dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/six"
                android:id="@+id/six"
                android:background="@drawable/number_button_style"
                android:layout_marginStart="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_height="40dp"
                tools:ignore="ButtonStyle" />


            <Button
                android:id="@+id/seven"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/number_button_style"
                android:text="@string/seven"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />
            <Button
                android:layout_width="40dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/eight"
                android:id="@+id/eight"
                android:background="@drawable/number_button_style"
                android:layout_marginStart="20dp"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:layout_height="40dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="40dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/nine"
                android:id="@+id/nine"
                android:layout_marginTop="20dp"
                android:background="@drawable/number_button_style"
                android:layout_marginStart="20dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_height="40dp"
                tools:ignore="ButtonStyle" />

        </GridLayout>



        <Button
            android:id="@+id/zero"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/number_button_style"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            tools:ignore="ButtonStyle" />


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:text="@string/engineer"
        android:textAlignment="center"
        android:id="@+id/engineer"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content"/>

</RelativeLayout>