<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePinActivity">

    <ImageView
        android:layout_width="60dp"
        android:src="@drawable/baseline_lock_24"
        android:contentDescription="@string/moto"
        android:layout_marginTop="20dp"
        android:id="@+id/smallLock"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_height="60dp"/>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/moto"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:layout_below="@+id/smallLock"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center"
        android:background="@drawable/linear_layout_style"
        android:layout_height="300dp">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/pin"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:background="@drawable/edit_view_style"
            android:layout_marginTop="15dp"
            android:hint="@string/username"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            android:paddingRight="10dp"
            android:paddingBottom="2dp"
            android:id="@+id/username"
            android:paddingTop="2dp"
            android:layout_height="36dp"
            android:inputType="text|textAutoComplete|textAutoCorrect"
            tools:ignore="Autofill" />

        <EditText
            android:layout_width="match_parent"
            android:background="@drawable/edit_view_style"
            android:layout_marginTop="15dp"
            android:hint="@string/userPin"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            android:paddingRight="10dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:id="@+id/code"
            android:layout_height="36dp"
            android:inputType="number|numberPassword"
            tools:ignore="Autofill" />

        <EditText
            android:layout_width="match_parent"
            android:background="@drawable/edit_view_style"
            android:layout_marginTop="15dp"
            android:hint="@string/pinConfirm"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="2dp"
            android:textSize="15sp"
            android:id="@+id/confirmCode"
            android:paddingTop="2dp"
            android:layout_height="36dp"
            android:inputType="number|numberPassword"
            tools:ignore="Autofill" />

        <Button
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/create"
            android:padding="5dp"
            android:id="@+id/create"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:layout_height="46dp"/>




    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:text="@string/engineer"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content"/>

</RelativeLayout>