<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/name"
        android:textColor="@color/black"
        android:id="@+id/name"
        android:textSize="16sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/time"
        android:id="@+id/time"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/status"
        android:id="@+id/status"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        tools:ignore="RelativeOverlap" />



</RelativeLayout>